--- a/07-PE_Univariados.Rmd
+++ b/07-PE_Univariados.Rmd
@@ -1,9 +1,3 @@
----
-editor_options: 
-  markdown: 
-    wrap: 72
----
-
 # Procesos estacionarios univariados
 
 En este capítulo analizaremos el método o metodología de análisis de
@@ -431,8 +425,10 @@ ld<-Sys.Date() #última fecha
 ld
 #Intervalos de tiempo
 int<-"monthly"
+
 #Datos a elegir
 dt<-c("AMZN")
+
 #Descargando los valores
 data1<- BatchGetSymbols(tickers = dt,
                        first.date = pd,
@@ -440,18 +436,18 @@ data1<- BatchGetSymbols(tickers = dt,
                        freq.data = int,
                        do.cache = FALSE,
                        thresh.bad.data = 0)
+
 #Generando data frame con los valores
 data_precio_amzn<-data1$df.tickers
 colnames(data_precio_amzn)
 
-#necesitamos convertir la serie de tiempo de precios en retornos continuos compuestos de los precios de apertura
-data_precio_amzn$ccrAMZN<-c(NA ,100*diff(log(data_precio_amzn$price.open)))#agregamos un valor NA al principio
-data_precio_amzn$ccrAMZN#estos son los retornos
-#tenemos 20 retornos a lo largo de 20 años
 ```
 
-```{r amazn20, fig.cap="Serie de tiempo de los retornos de año en los últimos 20 años", warning=FALSE, message=FALSE}
-ret_20_amazn<-ggplot(data=data_precio_amzn, aes(x=ref.date))+geom_line(aes(y=ccrAMZN))+labs(title="Retornos de AMZN en los últimos 20 años",y="Retornos", x="Año")+theme_light()
+```{r amazn20, fig.cap="Serie de tiempo de los precios de apertura de año en los últimos 20 años", warning=FALSE, message=FALSE}
+ret_20_amazn<-ggplot(data=data_precio_amzn, aes(x=ref.date))+
+  geom_line(aes(y=price.open))+
+  labs(title="Precios de apertura de AMZN en los últimos 20 años",y="Retornos", x="Año")+
+  theme_light()
 ret_20_amazn
 ```
 
@@ -464,12 +460,12 @@ de que los datos esten en orden cronológico.
 data_precio_amzn<-data_precio_amzn[order(data_precio_amzn$ref.date),]
 head(data_precio_amzn)#dado que ya estaba en orden cronológico nuestro df no cambia
 #hagamos el objeto ts
-ret_amazn_ts<-ts(data_precio_amzn$ccrAMZN)
-plot(ret_amazn_ts)#de esta manera podemos ver que se cargo bien debido a que es igual al ggplot
+price_amazn_ts<-ts(data_precio_amzn$price.open)
+plot(price_amazn_ts)#de esta manera podemos ver que se cargo bien debido a que es igual al ggplot
 ```
 
-Dado que queremos saber si existe un proceso AR(2) en estos cambio
-debemos calcularlo. Para ello utilizamos la función lm() que realizará una regresión lineal y veremos la relación de los valores con sus valores pasados en $t-2$:
+Dado que queremos saber si existe un proceso $AR(2)$ en estos cambio
+debemos calcularlo. Para ello utilizamos la función $lm()$ que realizará una regresión lineal y veremos la relación de los valores con sus valores pasados en $t-2$:
 
 ```{r}
 priceopen<-data_precio_amzn$price.open
@@ -482,13 +478,34 @@ ar2_amazn<-lm(priceopen~priceopen_lag1+priceopen_lag2, data=priceopen_amazn)
 
 Veamos la tabla de la regresión lineal:
 
-```{r Ar2precios, tab.cap="Regresión lineal que indica los valores de el proceso autoregresivo AR(2)", results='asis'}
+```{r, results='asis', echo=FALSE}
 stargazer(
-  ar2_amazn,
-  type = "html",
-  notes.align = "l", style="all", notes.append = FALSE,star.char=c("*"), notes=c("(p<0.1)=[*], (p<0.05)=[**], (p<0.01)=[***]"), title ="AR(2) de los precios de apertura de AMZN", label = "tab:Ar2precios")
+  ar2_amazn,type = "html",
+  notes.align = "l", style="all", 
+  notes.append = FALSE,star.char=c("*"), 
+  notes=c("(p<0.1)=[*], (p<0.05)=[**], (p<0.01)=[***]"), 
+  title ="AR(2) de los precios de apertura de AMZN")
 ```
 
-La Tabla anterior claramente indica que __hay una
-relación entre el valor del precio y sus valores anteriores en un
-proceso AR(2)__.
+La tabla anterior claramente indica que **hay una relación entre el valor del precio y sus valores anteriores en un proceso AR(2)**.
+
+Así pues es importante modificar la serie de tiempo para ilustrar como se puede controlar los efectos de los autoregresores $AR(2)$. Para ello, utilizaremos la función $arima()$. En "order" tenemos un vector $c(p,d,q)$ que corresponde $p$ a el grado de AR, $d$ el grado de diferención y $q$ el grado de MA que utilizaremos. El valor $q$ quedaráá en $0$ por ahora pero será analizado más adelante.
+
+```{r, message=FALSE, warning=FALSE}
+AR_price_amazn_ts<-Arima(price_amazn_ts,order=c(2,0,0),method = "ML")
+```
+Veamos si las raices inversas mantienen la estabilidad al ser menores a 1.
+```{r amazn20root, fig.cap="Raices AR(2) Inversas de la serie de tiempo", warning=FALSE, message=FALSE}
+comp_20_amazn<-autoplot(AR_price_amazn_ts, main = "Raices AR(2)")+theme_light()
+comp_20_amazn
+```
+Claramente se puede en la Figura \@ref(fig:amazn20root) ver que los valores de las raices inversas están dentro del circulo unitario y, por consiguiente son menores a 1. Ahora veamos como se ve la estimación ajustada AR(2) con el plot original.
+
+```{r amazn20AR2, fig.cap="Diferencia entre la serie de tiempo original de precios de AMZN y su AR(2)", warning=FALSE, message=FALSE}
+plot(AR_price_amazn_ts$x,col="black", main = "Diferencia entre la serie de tiempo original y AR(2)",xlab="Tiempo",ylab="Precio")+lines(fitted(AR_price_amazn_ts),col="blue")
+```
+Consecuentemente en la Figura \@ref(fig:amazn20AR2) es pocible ver la manera en la que se suaviza un poco la línea lo cual debe ayudarnos a hacer una mejor estimación. 
+
+
+
+
