--- a/bookdown.tex
+++ b/bookdown.tex
@@ -117,7 +117,7 @@
 
 \title{06-ESTACIONARIEDAD}
 \author{Emiliano Pérez Caullieres}
-\date{2022-09-27}
+\date{2022-09-28}
 
 \begin{document}
 \maketitle
@@ -190,10 +190,10 @@ Para la estimación utilizaremos el paquete ``BatchGetSymbols''. Este paquete no
 \CommentTok{\#Primero determinamos el lapso de tiempo}
 \NormalTok{pd}\OtherTok{\textless{}{-}}\FunctionTok{Sys.Date}\NormalTok{()}\SpecialCharTok{{-}}\DecValTok{365} \CommentTok{\#primer fecha}
 \NormalTok{pd}
-\CommentTok{\#\textgreater{} [1] "2021{-}09{-}27"}
+\CommentTok{\#\textgreater{} [1] "2021{-}09{-}28"}
 \NormalTok{ld}\OtherTok{\textless{}{-}}\FunctionTok{Sys.Date}\NormalTok{() }\CommentTok{\#última fecha}
 \NormalTok{ld}
-\CommentTok{\#\textgreater{} [1] "2022{-}09{-}27"}
+\CommentTok{\#\textgreater{} [1] "2022{-}09{-}28"}
 \CommentTok{\#Intervalos de tiempo}
 \NormalTok{int}\OtherTok{\textless{}{-}}\StringTok{"monthly"}
 \CommentTok{\#Datos a elegir}
@@ -249,10 +249,10 @@ Para la estimación utilizaremos el paquete ``BatchGetSymbols''. Este paquete no
 \CommentTok{\#datos estadísticos}
 \FunctionTok{summary}\NormalTok{(data\_precio[}\FunctionTok{c}\NormalTok{(}\StringTok{"price.open"}\NormalTok{,}\StringTok{"volume"}\NormalTok{)])}
 \CommentTok{\#\textgreater{}    price.open        volume         }
-\CommentTok{\#\textgreater{}  Min.   :106.3   Min.   :2.694e+08  }
+\CommentTok{\#\textgreater{}  Min.   :106.3   Min.   :1.967e+08  }
 \CommentTok{\#\textgreater{}  1st Qu.:126.0   1st Qu.:1.273e+09  }
 \CommentTok{\#\textgreater{}  Median :152.7   Median :1.465e+09  }
-\CommentTok{\#\textgreater{}  Mean   :148.1   Mean   :1.397e+09  }
+\CommentTok{\#\textgreater{}  Mean   :148.0   Mean   :1.396e+09  }
 \CommentTok{\#\textgreater{}  3rd Qu.:167.6   3rd Qu.:1.628e+09  }
 \CommentTok{\#\textgreater{}  Max.   :177.2   Max.   :2.258e+09}
 \CommentTok{\#análisis de regresión lineal lm() y=precio,x=fecha}
@@ -264,20 +264,20 @@ Para la estimación utilizaremos el paquete ``BatchGetSymbols''. Este paquete no
 \CommentTok{\#\textgreater{} lm(formula = price.open \textasciitilde{} ref.date, data = data\_precio)}
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} Residuals:}
-\CommentTok{\#\textgreater{}     Min      1Q  Median      3Q     Max }
-\CommentTok{\#\textgreater{} {-}21.955  {-}9.357  {-}0.544   9.431  20.717 }
+\CommentTok{\#\textgreater{}      Min       1Q   Median       3Q      Max }
+\CommentTok{\#\textgreater{} {-}21.9717  {-}9.2427  {-}0.4443   9.4999  20.7440 }
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} Coefficients:}
 \CommentTok{\#\textgreater{}               Estimate Std. Error t value Pr(\textgreater{}|t|)    }
-\CommentTok{\#\textgreater{} (Intercept) 3328.34629  631.35702   5.272 0.000264 ***}
-\CommentTok{\#\textgreater{} ref.date      {-}0.16690    0.03313  {-}5.037 0.000380 ***}
+\CommentTok{\#\textgreater{} (Intercept) 3319.11669  633.04069   5.243 0.000275 ***}
+\CommentTok{\#\textgreater{} ref.date      {-}0.16642    0.03322  {-}5.009 0.000397 ***}
 \CommentTok{\#\textgreater{} {-}{-}{-}}
 \CommentTok{\#\textgreater{} Signif. codes:  }
 \CommentTok{\#\textgreater{} 0 \textquotesingle{}***\textquotesingle{} 0.001 \textquotesingle{}**\textquotesingle{} 0.01 \textquotesingle{}*\textquotesingle{} 0.05 \textquotesingle{}.\textquotesingle{} 0.1 \textquotesingle{} \textquotesingle{} 1}
 \CommentTok{\#\textgreater{} }
-\CommentTok{\#\textgreater{} Residual standard error: 13.2 on 11 degrees of freedom}
-\CommentTok{\#\textgreater{} Multiple R{-}squared:  0.6976, Adjusted R{-}squared:  0.6701 }
-\CommentTok{\#\textgreater{} F{-}statistic: 25.37 on 1 and 11 DF,  p{-}value: 0.0003796}
+\CommentTok{\#\textgreater{} Residual standard error: 13.22 on 11 degrees of freedom}
+\CommentTok{\#\textgreater{} Multiple R{-}squared:  0.6952, Adjusted R{-}squared:  0.6675 }
+\CommentTok{\#\textgreater{} F{-}statistic: 25.09 on 1 and 11 DF,  p{-}value: 0.0003966}
 
 \CommentTok{\#análisis de regresión lineal lm() y=volumen,x=fecha}
 \NormalTok{reg\_tiempo\_volumen}\OtherTok{\textless{}{-}}\FunctionTok{lm}\NormalTok{(volume}\SpecialCharTok{\textasciitilde{}}\NormalTok{ref.date, }\AttributeTok{data=}\NormalTok{data\_precio)}
@@ -288,16 +288,16 @@ Para la estimación utilizaremos el paquete ``BatchGetSymbols''. Este paquete no
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} Residuals:}
 \CommentTok{\#\textgreater{}        Min         1Q     Median         3Q        Max }
-\CommentTok{\#\textgreater{} {-}984384732 {-}167015119   42626028  234203568  807994488 }
+\CommentTok{\#\textgreater{} {-}1.036e+09 {-}1.820e+08  3.993e+07  2.482e+08  8.011e+08 }
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} Coefficients:}
 \CommentTok{\#\textgreater{}               Estimate Std. Error t value Pr(\textgreater{}|t|)}
-\CommentTok{\#\textgreater{} (Intercept) {-}1.588e+10  2.260e+10  {-}0.702    0.497}
-\CommentTok{\#\textgreater{} ref.date     9.064e+05  1.186e+06   0.764    0.461}
+\CommentTok{\#\textgreater{} (Intercept) {-}1.846e+10  2.299e+10  {-}0.803    0.439}
+\CommentTok{\#\textgreater{} ref.date     1.042e+06  1.206e+06   0.864    0.406}
 \CommentTok{\#\textgreater{} }
-\CommentTok{\#\textgreater{} Residual standard error: 472300000 on 11 degrees of freedom}
-\CommentTok{\#\textgreater{} Multiple R{-}squared:  0.05043,    Adjusted R{-}squared:  {-}0.03589 }
-\CommentTok{\#\textgreater{} F{-}statistic: 0.5842 on 1 and 11 DF,  p{-}value: 0.4608}
+\CommentTok{\#\textgreater{} Residual standard error: 480100000 on 11 degrees of freedom}
+\CommentTok{\#\textgreater{} Multiple R{-}squared:  0.06349,    Adjusted R{-}squared:  {-}0.02165 }
+\CommentTok{\#\textgreater{} F{-}statistic: 0.7457 on 1 and 11 DF,  p{-}value: 0.4063}
 \end{Highlighting}
 \end{Shaded}
 
@@ -744,7 +744,7 @@ De esta manera sabemos que el rendimiento de TSLA NO es mayor debido a que el co
 \CommentTok{\#\textgreater{}    tickers =AAPL}
 \CommentTok{\#\textgreater{}    Downloading data for benchmark ticker}
 \CommentTok{\#\textgreater{} \^{}GSPC | yahoo (1|1)}
-\CommentTok{\#\textgreater{} AAPL | yahoo (1|1) {-} Got 100\% of valid prices | Looking good!}
+\CommentTok{\#\textgreater{} AAPL | yahoo (1|1) {-} Got 100\% of valid prices | You got it!}
 \NormalTok{data\_precio\_AAPL}\OtherTok{\textless{}{-}}\NormalTok{data3}\SpecialCharTok{$}\NormalTok{df.tickers}
 \FunctionTok{colnames}\NormalTok{(data\_precio\_AAPL)}
 \CommentTok{\#\textgreater{}  [1] "ticker"              "ref.date"           }
@@ -1118,10 +1118,10 @@ Figura \ref{fig:LAGSCAMINATA1} se ven tan correlacionados.
 \CommentTok{\#Primero determinamos el lapso de tiempo}
 \NormalTok{pd}\OtherTok{\textless{}{-}}\FunctionTok{Sys.Date}\NormalTok{()}\SpecialCharTok{{-}}\NormalTok{(}\DecValTok{365}\SpecialCharTok{*}\DecValTok{20}\NormalTok{) }\CommentTok{\#primer fecha}
 \NormalTok{pd}
-\CommentTok{\#\textgreater{} [1] "2002{-}10{-}02"}
+\CommentTok{\#\textgreater{} [1] "2002{-}10{-}03"}
 \NormalTok{ld}\OtherTok{\textless{}{-}}\FunctionTok{Sys.Date}\NormalTok{() }\CommentTok{\#última fecha}
 \NormalTok{ld}
-\CommentTok{\#\textgreater{} [1] "2022{-}09{-}27"}
+\CommentTok{\#\textgreater{} [1] "2022{-}09{-}28"}
 \CommentTok{\#Intervalos de tiempo}
 \NormalTok{int}\OtherTok{\textless{}{-}}\StringTok{"monthly"}
 \CommentTok{\#Datos a elegir}
@@ -1146,7 +1146,7 @@ Figura \ref{fig:LAGSCAMINATA1} se ven tan correlacionados.
 \CommentTok{\#necesitamos convertir la serie de tiempo de precios en retornos continuos compuestos de los precios de apertura}
 \NormalTok{data\_precio\_amzn}\SpecialCharTok{$}\NormalTok{ccrAMZN}\OtherTok{\textless{}{-}}\FunctionTok{c}\NormalTok{(}\ConstantTok{NA}\NormalTok{ ,}\DecValTok{100}\SpecialCharTok{*}\FunctionTok{diff}\NormalTok{(}\FunctionTok{log}\NormalTok{(data\_precio\_amzn}\SpecialCharTok{$}\NormalTok{price.open)))}\CommentTok{\#agregamos un valor NA al principio}
 \NormalTok{data\_precio\_amzn}\SpecialCharTok{$}\NormalTok{ccrAMZN}\CommentTok{\#estos son los retornos}
-\CommentTok{\#\textgreater{}   [1]           NA  13.39774561  22.83329766 {-}22.98950701}
+\CommentTok{\#\textgreater{}   [1]           NA  13.51679325  22.83329766 {-}22.98950701}
 \CommentTok{\#\textgreater{}   [5]  13.39221448   0.95260416  14.27998202  11.55626991}
 \CommentTok{\#\textgreater{}   [9]  24.11122449  {-}0.46684144  13.08785513  11.63599301}
 \CommentTok{\#\textgreater{}  [13]   3.89974592  12.48104071  {-}0.73260401  {-}3.06108260}
@@ -1239,7 +1239,7 @@ de que los datos esten en orden cronológico.
 \CommentTok{\#\textgreater{} \# A tibble: 6 x 11}
 \CommentTok{\#\textgreater{}   ticker ref.date     volume price\textasciitilde{}1 price\textasciitilde{}2 price\textasciitilde{}3 price\textasciitilde{}4}
 \CommentTok{\#\textgreater{}   \textless{}chr\textgreater{}  \textless{}date\textgreater{}        \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}}
-\CommentTok{\#\textgreater{} 1 AMZN   2002{-}10{-}02   3.89e9   0.840    1.01   0.818   0.968}
+\CommentTok{\#\textgreater{} 1 AMZN   2002{-}10{-}03   3.72e9   0.840    1.01   0.818   0.968}
 \CommentTok{\#\textgreater{} 2 AMZN   2002{-}11{-}01   4.13e9   0.961    1.23   0.91    1.17 }
 \CommentTok{\#\textgreater{} 3 AMZN   2002{-}12{-}02   3.11e9   1.21     1.25   0.922   0.944}
 \CommentTok{\#\textgreater{} 4 AMZN   2003{-}01{-}02   3.38e9   0.960    1.16   0.928   1.09 }
@@ -1790,14 +1790,16 @@ precio del ACTIVO AMZN como si fueran retornos:
 \CommentTok{\#Primero determinamos el lapso de tiempo}
 \NormalTok{pd}\OtherTok{\textless{}{-}}\FunctionTok{Sys.Date}\NormalTok{()}\SpecialCharTok{{-}}\NormalTok{(}\DecValTok{365}\SpecialCharTok{*}\DecValTok{20}\NormalTok{) }\CommentTok{\#primer fecha}
 \NormalTok{pd}
-\CommentTok{\#\textgreater{} [1] "2002{-}10{-}02"}
+\CommentTok{\#\textgreater{} [1] "2002{-}10{-}03"}
 \NormalTok{ld}\OtherTok{\textless{}{-}}\FunctionTok{Sys.Date}\NormalTok{() }\CommentTok{\#última fecha}
 \NormalTok{ld}
-\CommentTok{\#\textgreater{} [1] "2022{-}09{-}27"}
+\CommentTok{\#\textgreater{} [1] "2022{-}09{-}28"}
 \CommentTok{\#Intervalos de tiempo}
 \NormalTok{int}\OtherTok{\textless{}{-}}\StringTok{"monthly"}
+
 \CommentTok{\#Datos a elegir}
 \NormalTok{dt}\OtherTok{\textless{}{-}}\FunctionTok{c}\NormalTok{(}\StringTok{"AMZN"}\NormalTok{)}
+
 \CommentTok{\#Descargando los valores}
 \NormalTok{data1}\OtherTok{\textless{}{-}} \FunctionTok{BatchGetSymbols}\NormalTok{(}\AttributeTok{tickers =}\NormalTok{ dt,}
                        \AttributeTok{first.date =}\NormalTok{ pd,}
@@ -1812,6 +1814,7 @@ precio del ACTIVO AMZN como si fueran retornos:
 \CommentTok{\#\textgreater{} You can install yfR by executing:}
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} remotes::install\_github(\textquotesingle{}msperlin/yfR\textquotesingle{})}
+
 \CommentTok{\#Generando data frame con los valores}
 \NormalTok{data\_precio\_amzn}\OtherTok{\textless{}{-}}\NormalTok{data1}\SpecialCharTok{$}\NormalTok{df.tickers}
 \FunctionTok{colnames}\NormalTok{(data\_precio\_amzn)}
@@ -1820,77 +1823,15 @@ precio del ACTIVO AMZN como si fueran retornos:
 \CommentTok{\#\textgreater{}  [5] "price.high"          "price.low"          }
 \CommentTok{\#\textgreater{}  [7] "price.close"         "price.adjusted"     }
 \CommentTok{\#\textgreater{}  [9] "ret.adjusted.prices" "ret.closing.prices"}
-
-\CommentTok{\#necesitamos convertir la serie de tiempo de precios en retornos continuos compuestos de los precios de apertura}
-\NormalTok{data\_precio\_amzn}\SpecialCharTok{$}\NormalTok{ccrAMZN}\OtherTok{\textless{}{-}}\FunctionTok{c}\NormalTok{(}\ConstantTok{NA}\NormalTok{ ,}\DecValTok{100}\SpecialCharTok{*}\FunctionTok{diff}\NormalTok{(}\FunctionTok{log}\NormalTok{(data\_precio\_amzn}\SpecialCharTok{$}\NormalTok{price.open)))}\CommentTok{\#agregamos un valor NA al principio}
-\NormalTok{data\_precio\_amzn}\SpecialCharTok{$}\NormalTok{ccrAMZN}\CommentTok{\#estos son los retornos}
-\CommentTok{\#\textgreater{}   [1]           NA  13.39774561  22.83329766 {-}22.98950701}
-\CommentTok{\#\textgreater{}   [5]  13.39221448   0.95260416  14.27998202  11.55626991}
-\CommentTok{\#\textgreater{}   [9]  24.11122449  {-}0.46684144  13.08785513  11.63599301}
-\CommentTok{\#\textgreater{}  [13]   3.89974592  12.48104071  {-}0.73260401  {-}3.06108260}
-\CommentTok{\#\textgreater{}  [17]  {-}4.08140972 {-}16.32741069   0.99457279   0.06902105}
-\CommentTok{\#\textgreater{}  [21]   9.61879412  11.67844638 {-}33.59147712  {-}0.57381482}
-\CommentTok{\#\textgreater{}  [25]   7.69997922 {-}18.78100714  15.60691856  11.66713068}
-\CommentTok{\#\textgreater{}  [29]  {-}4.43506452 {-}20.41392362  {-}1.23405211  {-}6.96531282}
-\CommentTok{\#\textgreater{}  [33]   9.64353557  {-}6.77486160  30.02382912  {-}5.40177077}
-\CommentTok{\#\textgreater{}  [37]   6.39945115 {-}12.58398922  20.12391421  {-}2.92703823}
-\CommentTok{\#\textgreater{}  [41]  {-}7.77281354 {-}15.93630872  {-}2.10477279  {-}4.11970307}
-\CommentTok{\#\textgreater{}  [45]  {-}1.60415929  10.64572285 {-}37.21478392  15.01070027}
-\CommentTok{\#\textgreater{}  [49]   3.59739571  17.58906665   5.43570463  {-}4.00357496}
-\CommentTok{\#\textgreater{}  [53]  {-}1.90531667   3.54637914   1.33891100  42.77167396}
-\CommentTok{\#\textgreater{}  [57]  11.98170332  {-}0.13070948  12.66409736   2.27857959}
-\CommentTok{\#\textgreater{}  [61]  15.63296023  {-}6.26135927   2.56510858   5.74113839}
-\CommentTok{\#\textgreater{}  [65] {-}18.78533471 {-}21.72447597  13.78662202   7.15014819}
-\CommentTok{\#\textgreater{}  [69]   3.44753666 {-}11.63053849   5.54650897   8.53074641}
-\CommentTok{\#\textgreater{}  [73] {-}14.71605773 {-}24.20236452 {-}29.39126222  20.09953181}
-\CommentTok{\#\textgreater{}  [77]  13.15576837   8.77225235  13.27882326   9.60320128}
-\CommentTok{\#\textgreater{}  [81]  {-}2.73678724   7.64068237   2.50334747  {-}6.96036997}
-\CommentTok{\#\textgreater{}  [85]  13.59745291  24.90536163  14.32806129  {-}0.50514401}
-\CommentTok{\#\textgreater{}  [89] {-}10.08447333  {-}3.70473986  13.45839135   1.02565002}
-\CommentTok{\#\textgreater{}  [93]  {-}9.33660068 {-}13.76436786   8.99531736   5.87517724}
-\CommentTok{\#\textgreater{}  [97]  21.76202538   4.58513429   8.56726887   1.22598823}
-\CommentTok{\#\textgreater{} [101]  {-}6.16865517   1.74979032   4.53458328   7.93222740}
-\CommentTok{\#\textgreater{} [105]  {-}0.25978671   4.72685785   9.04110889  {-}4.41608958}
-\CommentTok{\#\textgreater{} [109]   0.80039290  {-}4.18766494  {-}8.13529694  {-}8.68550170}
-\CommentTok{\#\textgreater{} [113]  {-}1.18960511   3.43828044   9.60224827  14.70991690}
-\CommentTok{\#\textgreater{} [117]  {-}9.58159747   9.53799598   2.08880372   5.85976366}
-\CommentTok{\#\textgreater{} [121]   2.83140800  {-}8.65274050   7.52661134   1.39202437}
-\CommentTok{\#\textgreater{} [125]   4.89612270  {-}2.12710012   1.39936277  {-}5.02332605}
-\CommentTok{\#\textgreater{} [129]   5.76221809   3.66491122   8.27850152  {-}6.24554343}
-\CommentTok{\#\textgreater{} [133]   9.85520147  15.15285156   8.73395739  {-}0.05013788}
-\CommentTok{\#\textgreater{} [137] {-}10.51934673  {-}0.06687288  {-}5.92858190 {-}10.58568315}
-\CommentTok{\#\textgreater{} [141]   2.74371861   4.15753522  {-}3.80625428   8.04816141}
-\CommentTok{\#\textgreater{} [145]  {-}5.42111518  {-}5.03065911   9.90317538  {-}7.85404256}
-\CommentTok{\#\textgreater{} [149]  11.32156221   8.43295383  {-}2.32429615  13.01462014}
-\CommentTok{\#\textgreater{} [153]   1.54061721   2.05813986  20.15392877  {-}7.39490376}
-\CommentTok{\#\textgreater{} [157]   2.34828935  20.47843365   7.17052347  {-}2.62563883}
-\CommentTok{\#\textgreater{} [161] {-}12.67694180  {-}3.85435390   5.96629237  11.72089295}
-\CommentTok{\#\textgreater{} [165]   8.23387458  {-}0.49783030   5.76252931   1.44112456}
-\CommentTok{\#\textgreater{} [169]   8.10699776  {-}4.52676184  {-}6.00796092   0.72964776}
-\CommentTok{\#\textgreater{} [173]   8.98955770   2.83447462   4.01536256   4.38443827}
-\CommentTok{\#\textgreater{} [177]   7.35281333  {-}2.61760725   2.36894617  {-}1.20285851}
-\CommentTok{\#\textgreater{} [181]  {-}2.07377928  13.68712240   5.85471090  {-}0.00427124}
-\CommentTok{\#\textgreater{} [185]  20.93976645   4.63815978  {-}6.55115525   9.77684681}
-\CommentTok{\#\textgreater{} [189]   4.61358018   2.75160333   5.84583306  12.74521370}
-\CommentTok{\#\textgreater{} [193]  {-}0.22279328 {-}21.94794383   8.60716489 {-}18.86826361}
-\CommentTok{\#\textgreater{} [197]  11.20213025   0.98664739   8.39682297   7.12720047}
-\CommentTok{\#\textgreater{} [201]  {-}9.38002536   8.85565506  {-}2.70183034  {-}5.58782369}
-\CommentTok{\#\textgreater{} [205]  {-}1.36520548   2.37757442   0.91249016   3.83805218}
-\CommentTok{\#\textgreater{} [209]   6.98245156  {-}5.31693095   1.37938043  18.97247680}
-\CommentTok{\#\textgreater{} [213]   4.64889431  11.92308161  14.25393454   9.27398656}
-\CommentTok{\#\textgreater{} [217]  {-}8.41337555  {-}4.66642316   4.05671846   2.52393793}
-\CommentTok{\#\textgreater{} [221]  {-}0.84885499  {-}3.59427728  {-}0.31861156  11.12179968}
-\CommentTok{\#\textgreater{} [225]  {-}7.17375312   5.72503641  {-}2.40180912   4.18486227}
-\CommentTok{\#\textgreater{} [229]  {-}6.11473001   2.18899134   5.30616390  {-}5.62793333}
-\CommentTok{\#\textgreater{} [233] {-}11.06465380   1.80527180   7.20896224 {-}29.34750864}
-\CommentTok{\#\textgreater{} [237]  {-}0.11853658 {-}13.99459654  23.88072732  {-}6.86965832}
-\CommentTok{\#tenemos 20 retornos a lo largo de 20 años}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{ret\_20\_amazn}\OtherTok{\textless{}{-}}\FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data=}\NormalTok{data\_precio\_amzn, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x=}\NormalTok{ref.date))}\SpecialCharTok{+}\FunctionTok{geom\_line}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{y=}\NormalTok{ccrAMZN))}\SpecialCharTok{+}\FunctionTok{labs}\NormalTok{(}\AttributeTok{title=}\StringTok{"Retornos de AMZN en los últimos 20 años"}\NormalTok{,}\AttributeTok{y=}\StringTok{"Retornos"}\NormalTok{, }\AttributeTok{x=}\StringTok{"Año"}\NormalTok{)}\SpecialCharTok{+}\FunctionTok{theme\_light}\NormalTok{()}
+\NormalTok{ret\_20\_amazn}\OtherTok{\textless{}{-}}\FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data=}\NormalTok{data\_precio\_amzn, }\FunctionTok{aes}\NormalTok{(}\AttributeTok{x=}\NormalTok{ref.date))}\SpecialCharTok{+}
+  \FunctionTok{geom\_line}\NormalTok{(}\FunctionTok{aes}\NormalTok{(}\AttributeTok{y=}\NormalTok{price.open))}\SpecialCharTok{+}
+  \FunctionTok{labs}\NormalTok{(}\AttributeTok{title=}\StringTok{"Precios de apertura de AMZN en los últimos 20 años"}\NormalTok{,}\AttributeTok{y=}\StringTok{"Retornos"}\NormalTok{, }\AttributeTok{x=}\StringTok{"Año"}\NormalTok{)}\SpecialCharTok{+}
+  \FunctionTok{theme\_light}\NormalTok{()}
 \NormalTok{ret\_20\_amazn}
 \end{Highlighting}
 \end{Shaded}
@@ -1898,7 +1839,7 @@ precio del ACTIVO AMZN como si fueran retornos:
 \begin{figure}
 \centering
 \includegraphics{07-PE_Univariados_files/figure-latex/amazn20-1.pdf}
-\caption{\label{fig:amazn20}Serie de tiempo de los retornos de año en los últimos 20 años}
+\caption{\label{fig:amazn20}Serie de tiempo de los precios de apertura de año en los últimos 20 años}
 \end{figure}
 
 Primero que nada es importante cargar los datos a un objeto series de
@@ -1909,30 +1850,29 @@ de que los datos esten en orden cronológico.
 \begin{Highlighting}[]
 \NormalTok{data\_precio\_amzn}\OtherTok{\textless{}{-}}\NormalTok{data\_precio\_amzn[}\FunctionTok{order}\NormalTok{(data\_precio\_amzn}\SpecialCharTok{$}\NormalTok{ref.date),]}
 \FunctionTok{head}\NormalTok{(data\_precio\_amzn)}\CommentTok{\#dado que ya estaba en orden cronológico nuestro df no cambia}
-\CommentTok{\#\textgreater{} \# A tibble: 6 x 11}
+\CommentTok{\#\textgreater{} \# A tibble: 6 x 10}
 \CommentTok{\#\textgreater{}   ticker ref.date     volume price\textasciitilde{}1 price\textasciitilde{}2 price\textasciitilde{}3 price\textasciitilde{}4}
 \CommentTok{\#\textgreater{}   \textless{}chr\textgreater{}  \textless{}date\textgreater{}        \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}}
-\CommentTok{\#\textgreater{} 1 AMZN   2002{-}10{-}02   3.89e9   0.840    1.01   0.818   0.968}
+\CommentTok{\#\textgreater{} 1 AMZN   2002{-}10{-}03   3.72e9   0.840    1.01   0.818   0.968}
 \CommentTok{\#\textgreater{} 2 AMZN   2002{-}11{-}01   4.13e9   0.961    1.23   0.91    1.17 }
 \CommentTok{\#\textgreater{} 3 AMZN   2002{-}12{-}02   3.11e9   1.21     1.25   0.922   0.944}
 \CommentTok{\#\textgreater{} 4 AMZN   2003{-}01{-}02   3.38e9   0.960    1.16   0.928   1.09 }
 \CommentTok{\#\textgreater{} 5 AMZN   2003{-}02{-}03   2.32e9   1.10     1.12   0.980   1.10 }
 \CommentTok{\#\textgreater{} 6 AMZN   2003{-}03{-}03   3.28e9   1.11     1.40   1.07    1.30 }
-\CommentTok{\#\textgreater{} \# ... with 4 more variables: price.adjusted \textless{}dbl\textgreater{},}
+\CommentTok{\#\textgreater{} \# ... with 3 more variables: price.adjusted \textless{}dbl\textgreater{},}
 \CommentTok{\#\textgreater{} \#   ret.adjusted.prices \textless{}dbl\textgreater{}, ret.closing.prices \textless{}dbl\textgreater{},}
-\CommentTok{\#\textgreater{} \#   ccrAMZN \textless{}dbl\textgreater{}, and abbreviated variable names}
-\CommentTok{\#\textgreater{} \#   1: price.open, 2: price.high, 3: price.low,}
-\CommentTok{\#\textgreater{} \#   4: price.close}
+\CommentTok{\#\textgreater{} \#   and abbreviated variable names 1: price.open,}
+\CommentTok{\#\textgreater{} \#   2: price.high, 3: price.low, 4: price.close}
 \CommentTok{\#hagamos el objeto ts}
-\NormalTok{ret\_amazn\_ts}\OtherTok{\textless{}{-}}\FunctionTok{ts}\NormalTok{(data\_precio\_amzn}\SpecialCharTok{$}\NormalTok{ccrAMZN)}
-\FunctionTok{plot}\NormalTok{(ret\_amazn\_ts)}\CommentTok{\#de esta manera podemos ver que se cargo bien debido a que es igual al ggplot}
+\NormalTok{price\_amazn\_ts}\OtherTok{\textless{}{-}}\FunctionTok{ts}\NormalTok{(data\_precio\_amzn}\SpecialCharTok{$}\NormalTok{price.open)}
+\FunctionTok{plot}\NormalTok{(price\_amazn\_ts)}\CommentTok{\#de esta manera podemos ver que se cargo bien debido a que es igual al ggplot}
 \end{Highlighting}
 \end{Shaded}
 
 \includegraphics{07-PE_Univariados_files/figure-latex/unnamed-chunk-6-1.pdf}
 
-Dado que queremos saber si existe un proceso AR(2) en estos cambio
-debemos calcularlo. Para ello utilizamos la función lm() que realizará una regresión lineal y veremos la relación de los valores con sus valores pasados en \(t-2\):
+Dado que queremos saber si existe un proceso \(AR(2)\) en estos cambio
+debemos calcularlo. Para ello utilizamos la función \(lm()\) que realizará una regresión lineal y veremos la relación de los valores con sus valores pasados en \(t-2\):
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1945,15 +1885,6 @@ debemos calcularlo. Para ello utilizamos la función lm() que realizará una reg
 \end{Shaded}
 
 Veamos la tabla de la regresión lineal:
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\FunctionTok{stargazer}\NormalTok{(}
-\NormalTok{  ar2\_amazn,}
-  \AttributeTok{type =} \StringTok{"html"}\NormalTok{,}
-  \AttributeTok{notes.align =} \StringTok{"l"}\NormalTok{, }\AttributeTok{style=}\StringTok{"all"}\NormalTok{, }\AttributeTok{notes.append =} \ConstantTok{FALSE}\NormalTok{,}\AttributeTok{star.char=}\FunctionTok{c}\NormalTok{(}\StringTok{"*"}\NormalTok{), }\AttributeTok{notes=}\FunctionTok{c}\NormalTok{(}\StringTok{"(p\textless{}0.1)=[*], (p\textless{}0.05)=[**], (p\textless{}0.01)=[***]"}\NormalTok{), }\AttributeTok{title =}\StringTok{"AR(2) de los precios de apertura de AMZN"}\NormalTok{, }\AttributeTok{label =} \StringTok{"tab:Ar2precios"}\NormalTok{)}
-\end{Highlighting}
-\end{Shaded}
 
 AR(2) de los precios de apertura de AMZN
 
@@ -2009,15 +1940,13 @@ Residual Std. Error
 
 F Statistic
 
-9,358.762*** (df = 2; 235) (p = 0.000)
+9,358.763*** (df = 2; 235) (p = 0.000)
 
 Note:
 
 (p\textless0.1)={[}*{]}, (p\textless0.05)={[}**{]}, (p\textless0.01)={[}***{]}
 
-La Tabla anterior claramente indica que \textbf{hay una
-relación entre el valor del precio y sus valores anteriores en un
-proceso AR(2)}.
+La tabla anterior claramente indica que \textbf{hay una relación entre el valor del precio y sus valores anteriores en un proceso AR(2)}.
 
   \bibliography{book.bib,packages.bib}
 
