--- a/07-PE_Univariados.Rmd
+++ b/07-PE_Univariados.Rmd
@@ -538,7 +538,7 @@ library(pacman)
 pacman::p_load(tidyverse,BatchGetSymbols,ggplot2,lubridate,readxl,forecast,stats,stargazer)
 ```
 
-```{r fig.show='hide', echo=FALSE, message=FALSE, , echo=TRUE, fig.align='center', out.width="100%"}
+```{r fig.show='hide', message=FALSE, , echo=TRUE, fig.align='center', out.width="100%", warning=FALSE}
 #Primero determinamos el lapso de tiempo
 pd<-Sys.Date()-(365*20) #primer fecha
 pd
@@ -1264,7 +1264,7 @@ $$log(X_t)-log(X_{t-k})\sim\frac{X_t-X_{t-k}}{X_t}$$.
 
 
 Tranformacion de la serie original
-```{r, fig.align='center', out.width="100%"}
+```{r, fig.align='center', out.width="100%", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 #original
 price_amazn_ts<-ts(data_precio_amzn$price.open, frequency = 12, start=c(2002,10))
 #logartimo
@@ -1274,7 +1274,7 @@ dlprice_amazn_ts<-ts(log(data_precio_amzn$price.open)-lag(log(data_precio_amzn$p
 ```
 
 Las tres series
-```{r, fig.align='center', out.width="100%"}
+```{r, fig.align='center', out.width="100%", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 par(mfrow = c(3,1))
 plot(price_amazn_ts, xlab = "Tiempo", 
      main = "Precios de apertura",
@@ -1293,10 +1293,10 @@ plot(dlprice_amazn_ts, xlab = "Tiempo",
 Como lo vimos en las figuras \@ref(fig:pacfamzn) y \@ref(fig:acfamzn), es claro que debemos usar un valor $q$ de $1$ y $p$ de $1$. Pero tambien necesitamos diferenciar, lo cual corresponde al valor $d$. Así pues, dado que en las funciones de autocorrelacion solo vemos un pico arriba de la linea punteada azul, podemos asumir que el valor de diferenciación debe ser uno. Esto se debe seguir como regla de dedo, pero en general se debe usar el valor que minimice la desviacion estandar. Por tanto nuestro modelo debe ser $arima(1,1,1)$.
 
 Utilizamos la funcion "auto.arima" para confirmar que nuestra serie de tiempo deba ser $arima(1,1,1)$, el arima que debos usar es aquel que minimize el indice AIC.
-```{r, fig.align='center', out.width="100%"}
+```{r, fig.align='center', out.width="100%", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 auto.arima(price_amazn_ts, trace=TRUE)
 ```
-```{r, fig.align='center', out.width="100%"}
+```{r, fig.align='center', out.width="100%", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 ARIMA_price_amzn_ts_111<-arima(price_amazn_ts,order=c(1,1,1),method = "ML")
 ARIMA_price_amzn_pl_111<-Arima(price_amazn_ts,order=c(1,1,1),method = "ML")
 ```
@@ -1317,7 +1317,7 @@ Dado esto, sabemos claramente que podremos analizar de mejor manera estos valore
 
 
 
-## Pronósticos
+### Pronósticos
 
 Para pronósticar el valor de la serie es necesario determinar cuál es el valor esperado de la serie en un momento $t + \tau$ condicional en que ésta se comporta como un $AR(p)$, un $MA(q)$ o un $ARMA(p, q)$ y a que los valores antes de $t$ están dados. Por lo que el pronóstico de la serie estará dado por una expresión:
 
@@ -1325,12 +1325,12 @@ Para pronósticar el valor de la serie es necesario determinar cuál es el valor
     \mathbb{E}_t[X_{t+\tau}] = \delta + a_1 \mathbb{E}_t[X_{t+\tau-1}] + a_2 \mathbb{E}_t[X_{t+\tau-2}] + \ldots + + a_p \mathbb{E}_t[X_{t+\tau-p}]
     (\#eq:ARMApqFor)
 \end{eqnarray}
-```{r}
+```{r, warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 ARIMA_price_amzn_ts_111_F<-predict(ARIMA_price_amzn_ts_111, n.ahead = 12)
 ARIMA_price_amzn_ts_111_F
 ```
 Valores en la base de datos original:
-```{r}
+```{r, warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 pred<- forecast(ARIMA_price_amzn_ts_111,h=10)
 pred1 <- pred$mean
 union <- ts.union(price_amazn_ts,pred1)
@@ -1339,6 +1339,6 @@ df.pred[is.na(df.pred)] <- 0
 df.pred$complete <- df.pred$price_amazn_ts+df.pred$pred1
 head(df.pred)
 ```
-```{r}
+```{r predarima111, fig.cap="Predicción de $Arima(1,1,1)$", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
 plot(pred)
 ```
